--- a/client/app/index.html
+++ b/client/app/index.html
@@ -66,7 +66,7 @@
             </div>
         </div>
         <div class="modal-footer">
-            <button type="button" class="btn btn-primary btn-info" translate data-dismiss="modal">CLOSE</button>
+            <button type="button" class="btn btn--primary" translate data-dismiss="modal">CLOSE</button>
         </div>
     </div>
 
