--- a/template.html
+++ b/template.html
@@ -1,36 +1,32 @@
 <!-- inject:template-content -->
 <div class="lb-timeline" data-js-target="timeline">
   {% block timeline %}
-  <div class="lb-timeline {{ settings.language }}">
-    {% if settings.showTitle and blog.title %}
-      <h1>{{ blog.title }}</h1>
+  <div class="lb-timeline {{ options.language }}">
+    {% if theme_options.settings.showTitle and theme_options.blog.title %}
+      <h1>{{theme_options.blog.title}}</h1>
     {% endif %}
 
-    {% if settings.showDescription and blog.description %}
+    {% if theme_options.settings.showDescription and theme_options.blog.description %}
       <div class="description">
-        {{ blog.description | safe}}
+        {{theme_options.blog.description | safe}}
       </div>
     {% endif %}
 
-    {% if settings.showImage and blog.picture_url %}
-      <img src="{{ blog.picture_url }}" />
+    {% if theme_options.settings.showImage and theme_options.blog.picture_url %}
+      <img src="{{theme_options.blog.picture_url}}" />
     {% endif %}
 
     <!-- Header -->
     <div class="header-bar">
       <div class="sorting-bar">
-          <div class="sorting-bar__orders">
-              <div
-                id="newest_first"
-                class="sorting-bar__order sorting-bar__order--active"
-                data-js-orderby-newest-first>
-                {{ theme.l10n.newestFirst }}</div>
-              <div
-                id="oldest_first"
-                class="sorting-bar__order"
-                data-js-orderby-oldest-first>
-                {{ theme.l10n.oldestFirst }}</div>
+        <div class="sorting-bar__orders">
+          <div class="sorting-bar__order sorting-bar__order--active" data-js-orderby_newest_first>
+            {{ theme.l10n.newestFirst }}
           </div>
+          <div class="sorting-bar__order" data-js-orderby_oldest_first>
+            {{ theme.l10n.oldestFirst }}
+          </div>
+        </div>
       </div>
       <div class="header-bar__actions"></div>
     </div>
