--- a/template.html
+++ b/template.html
@@ -1,5 +1,5 @@
 <!-- inject:template-content -->
-<div class="lb-timeline" data-js-target="timeline">
+<div class="" data-js-target="timeline">
   {% block timeline %}
   <div class="lb-timeline {{ settings.language }}">
     {% if settings.showTitle and blog.title %}
