--- a/template.html
+++ b/template.html
@@ -2,7 +2,7 @@
 {% block timeline %}
 <div class="lb-timeline {{ settings.language }}">
   {% if settings.showTitle and blog.title %}
-    <h1>{{ settings.blog.title }}</h1>
+    <h1>{{ blog.title }}</h1>
   {% endif %}
 
   {% if settings.showDescription and blog.description %}
@@ -31,12 +31,19 @@
         </div>
       </div>
     </div>
-    <div class="header-bar__actions">
+    <div class="header-bar__actions"></div>
       {% if settings.canComment %}
         <button data-js-show-comment-dialog>Comment</button>
       {% endif %}
+
+      {% if settings.showLiveblogLogo %}
+        <a href="https://www.liveblog.pro" target="_blank">
+          <img
+            ng-src="{{ assets_root }}/images/lb-logo.svg"
+            src="{{ assets_root }}/images/lb-logo.svg" />
+        </a>
+      {% endif %}
     </div>
-  </div>
   <!-- Header End -->
   {% if settings.canComment %}
     {% include "template-comment.html" %}
