--- a/template.html
+++ b/template.html
@@ -44,7 +44,7 @@
       {% if settings.showLiveblogLogo %}
         <a class="header-bar__logo" href="https://www.liveblog.pro" target="_blank">
           <span>Powered by</span>
-          <img src="{{ assets_root }}/images/lb-logo.svg" />
+          <img src="{{ assets_root }}images/lb-logo.svg" />
         </a>
       {% endif %}
     </div>
