Squashed 'server/liveblog/themes/themes_assets/default/' changes from 33a9aff..d125ec1
d125ec1 Merge pull request #88 from liveblog/lbLogo
22dfc0c Fixed custom logo

git-subtree-dir: server/liveblog/themes/themes_assets/default
git-subtree-split: d125ec1809d717bacab0cfbd7a9e4ebc3f104710

--- a/template.html
+++ b/template.html
@@ -74,7 +74,9 @@
 
       {% if settings.showLiveblogLogo %}
         {% if output.logo_url %}
-        <img src="{{ output.logo_url }}"/>
+        <div class="header-bar__logo">
+          <img src="{{ output.logo_url }}"/>
+        </div>
         {% else %}
         <a class="header-bar__logo" href="https://www.liveblog.pro" target="_blank">
           <span>{{ translate("Powered by") }}</span>
