Squashed 'server/liveblog/themes/themes_assets/default/' changes from ba2cf60..7fcdba1
7fcdba1 chore: rebuild.
72e6008 chore: rebuild.
8d3360c feature: branding logo should show up in output channels.
661a096 fix: don't show `producer_blog_title` when `showSyndicatedAuthor`
f955e26 Merge pull request #105 from liveblog/revert-103-updateTime
20769d5 Merge branch 'master' into revert-103-updateTime
223557c Merge pull request #104 from aleksandarjelicic/post-header-fix
c4aaaca Revert "Showing updated time on post"
350b9f6 Icons, date and author wrapped in flex div
3e76a9a Merge pull request #103 from liveblog/updateTime
e29a289 Showing updated time on post

git-subtree-dir: server/liveblog/themes/themes_assets/default
git-subtree-split: 7fcdba14d94290a6d816e62c87d5de55078dbcbd

--- a/template.html
+++ b/template.html
@@ -72,7 +72,7 @@
         </button>
       {% endif %}
 
-      {% if settings.showLiveblogLogo %}
+      {% if settings.showLiveblogLogo or output.logo_url %}
         {% if output.logo_url %}
         <div class="header-bar__logo">
           <img src="{{ output.logo_url }}"/>
