--- a/client/app/index.html
+++ b/client/app/index.html
@@ -41,10 +41,10 @@
             <div class="about-page-text">
                 <p>
                     <div style="font-weight: 700" translate>
-                        Live Blog 3.3.7-syndicated-edit
+                        Live Blog 3.3.8
                     </div>
                     <div translate>
-                        Released on 19/02/2018
+                        Released on 9/03/2018
                     </div>
                 </p>
                 <p translate>
