--- a/client/app/index.html
+++ b/client/app/index.html
@@ -8,8 +8,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <link rel="icon" href="favicon.ico">
+    <style type="text/css">
+    [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+      display: none !important;
+    }
+    </style>
   </head>
-  <body>
+  <body class="ng-cloak">
 
     <div sd-superdesk-view></div>
     <div class="dropdown help-link liveblog-help" dropdown style="visibility: hidden">
