--- a/server/liveblog/themes/themes_assets/default/template.html
+++ b/server/liveblog/themes/themes_assets/default/template.html
@@ -1,8 +1,9 @@
 <!-- inject:template-content -->
 {% macro translate(text) %}{% if not options.i18n[settings.language] %}{{ text }}{% elif not options.i18n[settings.language][text] %}{{ text }}{% else %}{{ options.i18n[settings.language][text] }}{% endif %}{% endmacro %}
 
-{% block timeline %}
 <div data-timeline class="lb-timeline {{ settings.language }}">
+  {% block timeline_top %}
+
   {% if settings.showTitle and blog.title %}
     <h1>{{ blog.title }}</h1>
   {% endif %}
@@ -29,6 +30,10 @@
     </div>
   {% endif %}
 
+  {% endblock %}
+
+
+  {% block timeline_header %}
   <!-- Header -->
   <div class="header-bar">
     <div class="sorting-bar">
@@ -86,6 +91,7 @@
       {% endif %}
     </div>
   <!-- Header End -->
+  {% endblock %}
 
   <!-- Comment -->
   {% if settings.canComment %}
@@ -93,6 +99,7 @@
   {% endif %}
   <!-- Comment End -->
 
+  {% block timeline_body %}
   <!-- Timeline -->
   <div class="timeline-body timeline-body--loaded">
       <div data-one-new-update class="lb-post new-updates mod--displaynone">
@@ -129,9 +136,10 @@
       {% endif %}
   </div>
   <!-- Timeline End -->
+  {% endblock %}
+
 
 </div>
-{% endblock %}
 
 {% include "template-embed-providers.html" %}
 
