--- a/server/liveblog/themes/themes_assets/amp/template.html
+++ b/server/liveblog/themes/themes_assets/amp/template.html
@@ -24,10 +24,10 @@
 
     <div class="lb-social-share">
       <amp-social-share type="email" width="35" height="35"></amp-social-share>
-      <amp-social-share type="gplus" width="35" height="35"></amp-social-share>
       <amp-social-share type="twitter" width="35" height="35"></amp-social-share>
       <amp-social-share type="linkedin" width="35" height="35"></amp-social-share>
       <amp-social-share type="whatsapp" width="35" height="35"></amp-social-share>
+      <amp-social-share type="system" width="35" height="35"></amp-social-share>
     </div>
 
     {% if settings.showLiveblogLogo or output.logo_url %}
