LBSD-2367 Add 'Contact Support' button and updated ChromeDriver version in travis

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -17,6 +17,11 @@
   <body class="ng-cloak">
 
     <div sd-superdesk-view></div>
+
+    <a class="btn btn--primary btn--contact-support" target="_blank" href="https://sourcefabricberlin.zendesk.com/hc/en-us/requests/new">
+        Contact Support
+    </a>
+
     <div class="dropdown help-link liveblog-help" dropdown style="visibility: hidden">
         <div class="dropdown__toggle" dropdown__toggle style="cursor:pointer">Help <b class="caret"></b></div>
         <ul class="dropdown__menu" style="min-width: 90px;">
