--- a/client/app/index.html
+++ b/client/app/index.html
@@ -55,7 +55,7 @@
                         Live Blog 3.7.0
                     </div>
                     <div translate>
-                        Released on 09/10/2019
+                        Released on Oct 22, 2019
                     </div>
                 </p>
                 <p translate>
