--- a/client/app/index.html
+++ b/client/app/index.html
@@ -52,10 +52,10 @@
             <div class="about-page-text">
                 <p>
                     <div style="font-weight: 700" translate>
-                        Live Blog 3.7.0
+                        Live Blog 3.7.1-rc1
                     </div>
                     <div translate>
-                        Released on Oct 22, 2019
+                        Released on Nov 22, 2019
                     </div>
                 </p>
                 <p translate>
