--- a/client/app/index.html
+++ b/client/app/index.html
@@ -52,10 +52,10 @@
             <div class="about-page-text">
                 <p>
                     <div style="font-weight: 700" translate>
-                        Live Blog 3.7.1
+                        Live Blog 3.7.2-rc3
                     </div>
                     <div translate>
-                        Released on Nov 29, 2019
+                        Released on Feb 28, 2020
                     </div>
                 </p>
                 <p translate>
