LBSD-2467 Completed implementation of gdpr feature in Default SEO Theme

--- a/server/liveblog/themes/themes_assets/default/template.html
+++ b/server/liveblog/themes/themes_assets/default/template.html
@@ -22,6 +22,8 @@
 
   {% include "template-gdpr-consent-placeholder.html" %}
 
+  {% include "template-embed-providers.html" %}
+
   {% if settings.stickyPosition == 'top'%}
     <div class="timeline-top timeline-top--loaded">
       <section data-timeline-sticky class="lb-posts list-group{% if not api_response.stickyPosts._items|length %} sticky--empty{% endif %}">
