--- a/server/liveblog/themes/themes_assets/default/template.html
+++ b/server/liveblog/themes/themes_assets/default/template.html
@@ -74,7 +74,7 @@
         </div>
       </div>
     {% endif %}
-    {% if global_tags|length > 1 %}
+    {% if global_tags %}
     <div class="tags-filter-bar">
       <div class="tags-filter-bar__orders">
         <div class="tags-filter-bar__dropdownBtn" data-js-tags_filter_dropdown_button>
