--- a/server/liveblog/themes/themes_assets/default/template.html
+++ b/server/liveblog/themes/themes_assets/default/template.html
@@ -74,7 +74,7 @@
         </div>
       </div>
     {% endif %}
-    {% if global_tags and settings.showTagsDropdown %}
+    {% if settings.showTagsDropdown and ((output and global_tags|length > 1) or (not output and global_tags and global_tags|length > 0)) %}
     <div class="tags-filter-bar">
       <div class="tags-filter-bar__orders">
         <div class="tags-filter-bar__dropdownBtn" data-js-tags_filter_dropdown_button>
@@ -82,8 +82,8 @@
         </div>
         <div class="tags-filter-bar__dropdownContent">
           {% for tag in global_tags -%}
-          <div class="tags-filter-bar__order">
-            <input type="checkbox" name="tags-filter-tag-{{ tag }}" value="{{ tag }}" data-tags-filter-option/>
+          <div class="tags-filter-bar__order" data-tags-filter-option>
+            <input type="checkbox" name="tags-filter-tag-{{ tag }}" value="{{ tag }}"/>
             <label for="tags-filter-tag-{{ tag }}">{{ tag }}</label>
           </div>
           {% endfor %}
