--- a/client/app/index.html
+++ b/client/app/index.html
@@ -52,10 +52,10 @@
             <div class="about-page-text">
                 <p>
                     <div style="font-weight: 700" translate>
-                        Live Blog 3.8.0
+                        Live Blog 3.8.1-rc1
                     </div>
                     <div translate>
-                        Released on Apr 28, 2020
+                        Released on May 22, 2020
                     </div>
                 </p>
                 <p translate>
