--- a/client/app/index.html
+++ b/client/app/index.html
@@ -52,10 +52,10 @@
             <div class="about-page-text">
                 <p>
                     <div style="font-weight: 700" translate>
-                        Live Blog 3.8.1
+                        Live Blog 3.8.2-rc2
                     </div>
                     <div translate>
-                        Released on Jun 05, 2020
+                        Released on Jul 02, 2020
                     </div>
                 </p>
                 <p translate>
