--- a/client/app/index.html
+++ b/client/app/index.html
@@ -52,7 +52,7 @@
             <div class="about-page-text">
                 <p>
                     <div style="font-weight: 700" translate>
-                        Live Blog 3.8.21
+                        Live Blog 3.8.21-rc2
                     </div>
                     <div translate>
                         Released on Aug 20, 2020
