--- a/client/app/index.html
+++ b/client/app/index.html
@@ -52,10 +52,10 @@
             <div class="about-page-text">
                 <p>
                     <div style="font-weight: 700" translate>
-                        Live Blog 3.8.21
+                        Live Blog 3.8.3-rc1
                     </div>
                     <div translate>
-                        Released on Aug 24, 2020
+                        Released on Sept 18, 2020
                     </div>
                 </p>
                 <p translate>
