Render shared post in modal dialog
Now using the endpoint to show the shared post. Also adjusting styling and some other minor details

LBSD-2553

--- a/client/app/scripts/liveblog-embed-script/ui/shared-post-modal.html
+++ b/client/app/scripts/liveblog-embed-script/ui/shared-post-modal.html
@@ -14,10 +14,7 @@
         ></button>
       </header>
       <main class="lb--modal__content">
-        <h2>What is Lorem Ipsum?</h2>
-        <p>
-          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-        </p>
+        <iframe class="lb--shared-post-iframe" width="100%" height="500" src="__INSERT_IFRAME_URL__" frameborder="0" allowfullscreen></iframe>
       </main>
       <footer class="lb--modal__footer"></footer>
     </div>
@@ -45,7 +42,8 @@
 .lb--modal__container {
   background-color: #fff;
   padding: 20px;
-  max-width: 650px;
+  min-width: 650px;
+  min-height: 500px;
   max-height: 100vh;
   border-radius: 4px;
   overflow-y: auto;
@@ -53,9 +51,6 @@
 }
 
 .lb--modal__header {
-  /* display: flex;
-  justify-content: space-between;
-  align-items: center; */
   position: relative;
 }
 
