Adjust api endpoint and some minor details
LBSD-2553

--- a/client/app/scripts/liveblog-embed-script/ui/shared-post-modal.html
+++ b/client/app/scripts/liveblog-embed-script/ui/shared-post-modal.html
@@ -67,7 +67,7 @@
 .lb--modal__close {
   all: revert;
   position: absolute;
-  right: 0;
+  right: 10px;
   background: transparent;
   border: 0;
   font-size: 20px;
