--- a/client/app/index.html
+++ b/client/app/index.html
@@ -52,10 +52,10 @@
             <div class="about-page-text">
                 <p>
                     <div style="font-weight: 700" translate>
-                        Live Blog 3.81.1
+                        Live Blog 3.81.1-rc3
                     </div>
                     <div translate>
-                        Released on Dec 8, 2020
+                        Released on Apr 14, 2020
                     </div>
                 </p>
                 <p translate>
