--- a/client/app/index.html
+++ b/client/app/index.html
@@ -52,7 +52,7 @@
             <div class="about-page-text">
                 <p>
                     <div style="font-weight: 700" translate>
-                        Live Blog 3.81.1
+                        Live Blog 3.82.0-rc1
                     </div>
                     <div translate>
                         Released on Apr 26, 2020
