--- a/client/app/index.html
+++ b/client/app/index.html
@@ -52,10 +52,10 @@
             <div class="about-page-text">
                 <p>
                     <div style="font-weight: 700" translate>
-                        Live Blog 3.82.0
+                        Live Blog 3.82.1-rc1
                     </div>
                     <div translate>
-                        Released on Nov 26, 2021
+                        Released on Feb 11, 2022
                     </div>
                 </p>
                 <p translate>
