--- a/client/app/index.html
+++ b/client/app/index.html
@@ -52,10 +52,10 @@
             <div class="about-page-text">
                 <p>
                     <div style="font-weight: 700" translate>
-                        Live Blog 3.82.1
+                        Live Blog 3.82.2-rc1
                     </div>
                     <div translate>
-                        Released on Mar 25, 2022
+                        Released on Jun 17, 2022
                     </div>
                 </p>
                 <p translate>
