--- a/server/liveblog/themes/themes_assets/default/template.html
+++ b/server/liveblog/themes/themes_assets/default/template.html
@@ -78,7 +78,7 @@
     <div class="tags-filter-bar">
       <div class="tags-filter-bar__orders">
         <div class="tags-filter-bar__dropdownBtn" data-js-tags_filter_dropdown_button>
-          Filter Content
+          {{ translate("Filter") }}
         </div>
         <div class="tags-filter-bar__dropdownContent">
           {% for tag in global_tags -%}
