--- a/client/app/index.html
+++ b/client/app/index.html
@@ -52,7 +52,7 @@
             <div class="about-page-text">
                 <p>
                     <div style="font-weight: 700" translate>
-                        Live Blog 3.82.4_dev0
+                        Live Blog 3.82.4-dev0
                     </div>
                     <div translate>
                         Released on Nov 28, 2022
