Update container of shared post to make responsive
LBSD-2670

--- a/client/app/scripts/liveblog-embed-script/ui/shared-post-modal.html
+++ b/client/app/scripts/liveblog-embed-script/ui/shared-post-modal.html
@@ -42,8 +42,8 @@
 .lb--modal__container {
   background-color: #fff;
   padding: 20px;
-  min-width: 650px;
-  min-height: 500px;
+  width: 100%;
+  max-width: 650px;
   max-height: 100vh;
   border-radius: 4px;
   overflow-y: auto;
