--- a/client/app/index.html
+++ b/client/app/index.html
@@ -52,10 +52,10 @@
             <div class="about-page-text">
                 <p>
                     <div style="font-weight: 700" translate>
-                        Live Blog 3.82.4-dev0
+                        Live Blog 3.82.4-rc1
                     </div>
                     <div translate>
-                        Released on Nov 28, 2022
+                        Released on Jan 16, 2023
                     </div>
                 </p>
                 <p translate>
