--- a/client/app/index.html
+++ b/client/app/index.html
@@ -52,10 +52,10 @@
             <div class="about-page-text">
                 <p>
                     <div style="font-weight: 700" translate>
-                        Live Blog 3.82.4
+                        Live Blog 3.82.5-rc1
                     </div>
                     <div translate>
-                        Released on Mar 02, 2023
+                        Released on Mar 27, 2023
                     </div>
                 </p>
                 <p translate>
