All views responsive quick fix

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -19,7 +19,7 @@
     <div sd-superdesk-view></div>
 
     <a class="btn btn--primary btn--contact-support" target="_blank" href="https://sourcefabricberlin.zendesk.com/hc/en-us/requests/new">
-        Contact Support
+        <span>Contact</span> Support
     </a>
 
     <div class="dropdown help-link liveblog-help" dropdown style="visibility: hidden">
