--- a/client/app/index.html
+++ b/client/app/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Liveblog</title>
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <link rel="icon" href="favicon.ico">
     <style type="text/css">
