--- a/server/liveblog/themes/themes_assets/default/template.html
+++ b/server/liveblog/themes/themes_assets/default/template.html
@@ -5,6 +5,8 @@
 
 {% include "template-watermark.html" %}
 
+{% include "template-poll-utils.html" %}
+
 {% include "template-gdpr-consent-placeholder.html" %}
 
 <div data-timeline class="lb-timeline {{ settings.language }}">
