--- a/server/liveblog/themes/themes_assets/simple/template.html
+++ b/server/liveblog/themes/themes_assets/simple/template.html
@@ -5,6 +5,8 @@
 
 {% include "template-watermark.html" %}
 
+{% include "template-poll-utils.html" %}
+
 {% include "template-gdpr-consent-placeholder.html" %}
 
 <div data-timeline class="lb-timeline {{ settings.language }}">
@@ -78,7 +80,7 @@
     <div class="tags-filter-bar">
       <div class="tags-filter-bar__orders">
         <div class="tags-filter-bar__dropdownBtn" data-js-tags_filter_dropdown_button>
-          Filter Content
+          {{ translate("Filter") }}
         </div>
         <div class="tags-filter-bar__dropdownContent">
           {% for tag in global_tags -%}
@@ -140,6 +142,13 @@
       </div>
       <div data-new-updates class="lb-post new-updates mod--displaynone">
         <div>{{ translate("See new updates") }}</div>
+      </div>
+      <div data-counted-updates class="lb-post new-updates mod--displaynone">
+        <div>
+          <span id="data-counted-updates-length-container">
+          </span>
+          {{ translate(" new updates") }}
+        </div>
       </div>
     {% if settings.stickyPosition == 'bottom' %}
       <section data-timeline-sticky class="lb-posts list-group sticky{% if not api_response.stickyPosts._items|length %} sticky--empty{% endif %}">
