--- a/client/app/index.html
+++ b/client/app/index.html
@@ -52,17 +52,17 @@
             <div class="about-page-text">
                 <p>
                     <div style="font-weight: 700" translate>
-                        Live Blog 3.85.0
+                        Live Blog 3.90.0-rc1
                     </div>
                     <div translate>
-                        Released on Dec 04, 2023
+                        Released on Apr 15, 2024
                     </div>
                 </p>
                 <p translate>
                     Sourcefabric's <a href="https://www.sourcefabric.org/en/liveblog/" target="_blank">Live Blog</a> is an open source web app that enables journalists to provide immediate and ongoing coverage on rapidly evolving news events. Live Blog is powered by the <a href="http://www.superdesk.org/" target="_blank">Superdesk platform</a> and developed with love.
                 </p>
                 <p translate>
-                    Copyright (c) 2014 - 2023 Sourcefabric z.u. and <a href="https://github.com/liveblog/liveblog/graphs/contributors" target="_blank">contributors</a>.<br/>
+                    Copyright (c) 2014 - 2024 Sourcefabric z.u. and <a href="https://github.com/liveblog/liveblog/graphs/contributors" target="_blank">contributors</a>.<br/>
                     Live Blog is released under the <a href="https://github.com/liveblog/liveblog/blob/master/LICENSE" target="_blank">open source license AGPLv3</a>.
                 </p>
                 <p>
