Added instance-settings page under settings

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -82,6 +82,7 @@
     <script src="config.js"></script>
     <script src="sir-trevor.js"></script>
     <script src="app.bundle.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.33.1/ace.js" integrity="sha512-WN1CEDE9Js0mEqvtRrNS7GHS+arRJxWVO03zttkQQXEQjwGVcHQ2kMja415m0bNeB3AtYsyjUWJ1BS4wGLta/Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
   </body>
 </html>
