--- a/client/app/index.html
+++ b/client/app/index.html
@@ -52,10 +52,10 @@
             <div class="about-page-text">
                 <p>
                     <div style="font-weight: 700" translate>
-                        Live Blog 3.86.0-rc2
+                        Live Blog 3.86.0
                     </div>
                     <div translate>
-                        Released on Jun 07, 2024
+                        Released on Jul 12, 2024
                     </div>
                 </p>
                 <p translate>
